--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoundVibe</title>
-    <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
     <style>
-    body {
-      display: flex;
-      height: 100vh;
-      overflow-y: hidden;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
+      * {
+        font-family: "Roboto", sans-serif;
+      }
+      body {
+        display: flex;
+        height: 100vh;
+        overflow-y: hidden;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
       .status-circle {
         width: 25px;
         height: 25px;
@@ -31,9 +38,30 @@
         flex-direction: column;
         border: 1px solid black;
       }
+
+      .timer-box {
+        margin: 5px;
+        padding: 5px;
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border: 1px solid black;
+      }
+
+      .timer-time {
+        margin: 5px 0;
+      }
     </style>
   </head>
   <body>
+    <div class="timer-box">
+      <span>Таймер</span>
+      <input max="60" value="25" type="range" name="time" id="timer-range" />
+      <span class="timer-time">25:00</span>
+      <button class="timer-button">Старт</button>
+    </div>
     <div class="sound-box">
       <div class="status-circle"></div>
       <input type="range" value="100" name="volume" id="thunder-volume" />
@@ -55,5 +83,6 @@
       <button id="lofi">Lo-Fi</button>
     </div>
   </body>
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/sound.js"></script>
+  <script src="./scripts/timer.js"></script>
 </html>
